# vibe-Monitor

./: .gitignore  AGENTS.md  README.md  build_offline_zip.py  index.html  package-lock.json  package.json  开发指南.md  本轮更新.md  本轮进展.md
backend/: .gitignore  README.md  alembic.ini  pyproject.toml  run.py
backend/app/: __init__.py  main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: ea917fbdae08_initial_m0_tables.py
backend/app/api/: bootstrap.py  health.py  import_routes.py  map_summary.py  monitor_routes.py  routes.py  skeleton.py
backend/app/cache/: __init__.py  store.py
backend/app/core/: __init__.py  config.py  db.py
backend/app/datahub/: __init__.py  client.py
backend/app/importers/: __init__.py  import_service.py  line_importer.py  meeting_importer.py  station_importer.py  tower_importer.py  year_progress_importer.py
backend/app/models/: base.py  m0_models.py
backend/app/read_models/: __init__.py  service.py
backend/app/schemas/: __init__.py  responses.py
backend/scripts/db/: align_db.py  init_db.py
backend/scripts/diagnostics/: check_yp.py  check_yp2.py  verify_http.py  verify_m1r2.py  verify_skeleton_api.py
backend/scripts/imports/: dev_import.py  import_via_api.py  m1_import.py  m1_round2_import.py  reimport_stations.py
backend/tests/: test_monitor_backend_cache.py
doc/: M0需求分析.md  M1需求分析.md  README.md  backend定位.md  preMVP需求分析.md  当前状态.md  技术分析.md  数据维护说明.md  测试用例.md  用户操作说明.md  运行与联调.md  部署运行说明.md  需求分析.md  项目交接说明.md  验收清单.md
frontend/: .env.development  index.html  main.tsx  package-lock.json  package.json  (+4 more)
(+77 files in other folders)
