[project]
name = "vibe-monitor-backend"
version = "0.1.0"
description = "FastAPI backend for the Vibe Monitor digital sandbox."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.12.1",
  "fastapi>=0.104.1",
  "pydantic>=2.5.0",
  "pydantic-settings>=2.1.0",
  "python-dateutil>=2.8.2",
  "python-multipart>=0.0.6",
  "sqlmodel>=0.0.14",
  "uvicorn[standard]>=0.24.0",
]

[dependency-groups]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.0.0",
  "requests>=2.31.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

